# humanoid_control

./: README.md
example/controllers/webots_pinocchio_test/: CMakeLists.txt  webots_pinocchio_test.cpp
example/world/: ure5.wbt
idea_memo/: imple_idea.md
