cmake_minimum_required(VERSION 3.10)
project(example)

function(enable_ninja_output_coloring target)
    if(UNIX AND CMAKE_GENERATOR STREQUAL "Ninja")
        if(CMAKE_CXX_COMPILER_ID STREQUAL "Clang")
            target_compile_options(${target} PRIVATE -fcolor-diagnostics)
            target_compile_options(${target} PRIVATE -fcolor-diagnostics)
        endif()
        if(CMAKE_CXX_COMPILER_ID STREQUAL "GNU")
            target_compile_options(${target} PRIVATE -fdiagnostics-color)
            target_compile_options(${target} PRIVATE -fdiagnostics-color)
        endif()
    endif()
endfunction(enable_ninja_output_coloring)

find_package(Eigen3 REQUIRED)

if(DEFINED ENV{WEBOTS_HOME})
set(WEBOTS_HOME $ENV{WEBOTS_HOME})
else()
set(WEBOTS_HOME /usr/local/webots)
endif()
link_directories(${WEBOTS_HOME}/lib/controller)
set(WEBOTS_LIBRARIES Controller CppController)

include_directories(${WEBOTS_HOME}/include/controller/c ${WEBOTS_HOME}/include/controller/cpp)
include_directories(/opt/openrobots/include)
link_directories(/opt/openrobots/lib)
add_executable(webots_pinocchio_test webots_pinocchio_test.cpp)
enable_ninja_output_coloring(webots_pinocchio_test)
target_link_libraries(webots_pinocchio_test Eigen3::Eigen pinocchio ${WEBOTS_LIBRARIES})
install(TARGETS webots_pinocchio_test DESTINATION ${CMAKE_CURRENT_SOURCE_DIR})